hms-backend/force-app/main/default/objects/AI_Audit__c/fields/Appointment__c.field-meta.xml
<CustomField>
    <fullName>Appointment__c</fullName>
    <label>Appointment</label>
    <referenceTo>Appointment__c</referenceTo>
    <relationshipLabel>AI Audits</relationshipLabel>
    <relationshipName>AI_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>