hms-backend/force-app/main/default/objects/AI_Audit__c/fields/Input_Notes__c.field-meta.xml
<CustomField>
    <fullName>Input_Notes__c</fullName>
    <label>Input Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>