hms-backend/force-app/main/default/objects/AI_Audit__c/fields/Output_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Output_Specialty__c</fullName>
    <label>Output Specialty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>